--- a/full-stack-sort/package.json
+++ b/full-stack-sort/package.json
@@ -38,7 +38,7 @@
     "@angular-eslint/eslint-plugin": "~17.0.0",
     "@angular-eslint/eslint-plugin-template": "~17.0.0",
     "@angular-eslint/template-parser": "~17.0.0",
-    "@angular/cli": "~17.0.0",
+    "@angular/cli": "^17.1.2",
     "@angular/compiler-cli": "~17.0.0",
     "@angular/language-service": "~17.0.0",
     "@nestjs/schematics": "^10.0.1",
